<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Streetdom</string>
    <string name="title_activity_main" translatable="false">@string/app_name</string>
    <string name="title_activity_map" translatable="false">@string/map</string>
    <string name="title_activity_place" translatable="false">@string/place</string>
    <string name="title_activity_mission" translatable="false">@string/mission</string>
    <string name="title_activity_missions" translatable="false">@string/missions</string>
    <string name="title_activity_right_place" translatable="false">@string/right_place</string>
    <string name="title_activity_licenses" translatable="false">@string/licenses</string>
    <string name="title_activity_credits" translatable="false">@string/us</string>
    <string name="place_check">Check</string>
    <string name="mission_open_map">Open Map</string>
    <string name="map">Map</string>
    <string name="mission">Mission</string>
    <string name="missions">Missions</string>
    <string name="progress" translatable="false">%1$3.0f%%</string>
    <string name="completed_missions">Completed Missions</string>
    <string name="incompleted_missions">Incompleted Missions</string>
    <string name="new_missions">New Missions</string>
    <string name="share">Share</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="current_clue">Current Clue</string>
    <string name="clue_title">Clue: %1$s</string>
    <string name="clue">Clue</string>
    <string name="clues">Clues</string>
    <string name="continue_text">Continue</string>
    <string name="place">Place</string>
    <string name="right_place">Right Place</string>
    <string name="focus_places">Focus Places</string>
    <!-- Sign In -->
    <string name="not_signed_in_greeting">Hello, anonymous user!</string>
    <string name="signed_in_greeting">Hello, %1$s!</string>
    <string name="signing_in">Signing in…</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <!-- Google Play -->
    <string name="google_play_services" translatable="false">Google Play Services</string>
    <string name="base_game_utils" translatable="false">Base Game Utils</string>
    <!-- Actions -->
    <string name="action_settings" translatable="false">@string/settings</string>
    <string name="action_sign_in_out" translatable="false">@string/sign_in</string>
    <string name="action_clues" translatable="false">@string/clues</string>
    <string name="action_focus_places" translatable="false">@string/focus_places</string>
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="language_default">Default</string>
    <string name="notifications">Notifications</string>
    <string name="data">Data</string>
    <string name="erase_data">Erase Data</string>
    <string name="erase_data_message">All your progress will be erased from this device. This action is irreversible.</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="universal_image_loader" translatable="false">Universal Image Loader</string>
    <string name="us">Us</string>
    <string name="developer">Developer</string>
    <string name="designer">Designer</string>
    <string name="giancarlo" translatable="false">Giancarlo Calderón</string>
    <string name="giancarlo_link" translatable="false"></string>
    <string name="edwin" translatable="false">Edwin Chavest</string>
    <string name="edwin_link" translatable="false"></string>
    <string name="version">Version</string>

</resources>