<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/main_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toLeftOf="@+id/main_sign_out"
        android:text="@string/not_signed_in_greeting"
        android:textSize="18sp" />

    <Button
        android:id="@+id/main_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:onClick="signOutGoogle"
        android:text="@string/sign_out"
        android:visibility="gone" />

    <Button
        android:id="@+id/main_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="showMissions"
        android:text="@string/missions" />

    <LinearLayout
        android:id="@+id/main_sign_in_bar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:background="@color/main_sign_in_background"
        android:gravity="center"
        android:padding="10dp"
        android:visibility="gone" >

        <Button
            android:id="@+id/main_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/common_signin_btn_text_dark"
            android:onClick="singInGoogle"
            android:text="@string/common_signin_button_text"
            android:textColor="@color/common_signin_btn_text_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/main_sign_in_why"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/sign_in_why"
            android:textColor="@color/main_sign_in_why" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_signed_in_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:gravity="center"
        android:padding="10dp"
        android:visibility="visible" >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/main_achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/achievements"
                android:gravity="center"
                android:onClick="showAchievements"
                android:src="@drawable/main_achievements_background"
                android:text="@string/achievements" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/main_leaderboards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/leaderboards"
                android:gravity="center"
                android:onClick="showLeaderboard"
                android:src="@drawable/main_leaderboards_background"
                android:text="@string/leaderboards" />
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>