<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreditsActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/us" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/credits_giancarlo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/missions_divider"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/credits_giancarlo_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/giancarlo"
                    android:src="@drawable/credits_giancarlo" />

                <TextView
                    android:id="@+id/credits_giancarlo_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giancarlo"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/credits_giancarlo_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="20dp" />

            <LinearLayout
                android:id="@+id/credits_edwin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/missions_divider"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/credits_edwin_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/edwin"
                    android:src="@drawable/credits_edwin" />

                <TextView
                    android:id="@+id/credits_edwin_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edwin"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/credits_edwin_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/designer" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>